# cart-service

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 36ce6e3624d0_initial_migrations.py  555df7455e61_add_is_selected_to_cart_items.py  d236c166170e_change_product_id_type_from_uuid_to_.py
src/: config.py  exceptions.py  logger.py  main.py
src/api/: dependencies.py
src/api/internal/: cart.py  router.py  sync.py
src/api/v1/: cart.py  router.py
src/db/: models.py
src/messaging/: broker.py  consumer.py  schemas.py
src/repositories/: cart.py
src/schemas/: cart.py  internal.py  product.py
src/services/: cart.py  product_client.py
